# gothic-wasm4

./: .gitmodules  Cargo.toml  i386-gunwos-unknown.json  i386-gunwos-unknown.ld
.cargo/: config.toml
gothic/: Cargo.toml  build.rs
gothic/resources/: sprite.mustache
gothic/src/: allocator.rs  context.rs  dialogue.rs  dispatcher.rs  image_asset.rs  images.rs  lib.rs  main.rs  music.rs  music_clips.rs  platform_context.rs  renderable.rs  sprites.rs  system.rs  updatable.rs
gothic/src/audio/: audio_system.rs  mod.rs  music.rs
gothic/src/game/: cinematic_intro.rs  dialogue_intro.rs  game_scene.rs  game_world.rs  main_menu.rs  mod.rs  player.rs
gothic/src/game/dialogue/: dialogue_diego_first_meet.rs  dialogue_intro.rs  mod.rs
gothic/src/ui/: main_menu.rs  mod.rs  navigator.rs  simple_menu.rs  text.rs
gothic/src/ui/cinematic/: cinematic.rs  cinematic_player.rs  cinematic_screen.rs  mod.rs
gothic/src/ui/dialogue/: dialogue.rs  dialogue_overlay.rs  dialogue_player_choice_view.rs  dialogue_script_view.rs  dialogue_sentence_view.rs  mod.rs
gothic/src/ui/geometry/: mod.rs  point.rs  rect.rs  size.rs  vector.rs
src/: allocator.rs  main.rs  renderable.rs
src/ui/: main_menu.rs  mod.rs  text.rs
