[package]
name = "gothic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gothic"

[[bin]]
name = "wasm-4"
test = false
bench = false

[[bin]]
name = "windows"

[target.wasm32-unknown-unknown.dependencies]
wasm4 = { path = "../wasm4" }
buddy-alloc = "0.4"
