[package]
name = "gothic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gothic"

[[bin]]
name = "wasm4"
test = false
bench = false

[[bin]]
name = "windows"

[dependencies]
libm = "0.2"

[build-dependencies]
codegen = "0.2.0"
imagesize = "0.11"

[target.wasm32-unknown-unknown.dependencies]
wasm4 = { path = "../wasm4" }
buddy-alloc = "0.4"

[target.x86_64-pc-windows-msvc.dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Media_MediaFoundation",
    "Win32_UI_Input_KeyboardAndMouse"
]